# sauronlib

./: .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  codemeta.json  pyproject.toml  tox.ini
docs/: index.rst
sauronlib/: __init__.py  audio_handler.py  audio_info.py  board.py  board_layout.py  cli.py  stimulus.py
sauronlib/camera/: __init__.py  camera.py  camera_config.py  external_command_camera.py  webcam.py
sauronlib/scheduling/: block_scheduler.py  schedule.py  schedule_runner.py  stimulus_time_log.py
sauronlib/sensors/: arduino_sensor.py  microphone.py  sensor.py  sensor_registry.py
